--- a/package.json
+++ b/package.json
@@ -5,6 +5,11 @@
   "author": "Puru Vijay (https://puruvj.dev)",
   "repository": "puruvj/svelte-hotkeys",
   "type": "module",
+  "exports": {
+    ".": {
+      "import": "./dist/index"
+    }
+  },
   "module": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
@@ -18,7 +23,11 @@
   "keywords": [],
   "license": "MIT",
   "devDependencies": {
+    "hotkeys-js": "^3.8.7",
     "tsup": "^4.12.4",
     "typescript": "^4.3.5"
+  },
+  "peerDependencies": {
+    "hotkeys-js": "^3.8.7"
   }
 }
